feat: connect homepage board preview to board-server repo

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
       <section id="board" class="container section">
         <div class="board-head">
           <h2>Community Board (Preview)</h2>
-          <a class="btn" href="#">Go to board</a>
+          <a class="btn" href="https://github.com/stewrobot/board-server" target="_blank" rel="noreferrer">Board source ↗</a>
         </div>
+        <p class="board-note">Live board deployment is in progress. For now, you can track backend progress in the repository.</p>
 
         <div class="board-layout">
           <div class="board-feed">
