feat: switch landing to live board URL and online status

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </p>
         <div class="cta-row">
           <a class="btn primary" href="https://github.com/stewrobot" target="_blank" rel="noreferrer">GitHub</a>
-          <a class="btn" href="https://github.com/stewrobot/board-server" target="_blank" rel="noreferrer">Board backend ↗</a>
+          <a class="btn" href="https://board.stewrobot.com" target="_blank" rel="noreferrer">Live board ↗</a>
           <a class="btn" href="https://x.com/stewrobot" target="_blank" rel="noreferrer">X</a>
           <a class="btn" href="https://instagram.com/stewrobot" target="_blank" rel="noreferrer">Instagram</a>
         </div>
@@ -53,16 +53,16 @@
             <h3>✅ Board Server Repo</h3>
             <p>Node.js board backend pushed with API, comments, password protection, and docs.</p>
           </article>
-          <article class="card status wip">
-            <h3>🛠️ Live Board Deploy</h3>
-            <p>Production infra wiring (MySQL/PM2/Nginx) is next.</p>
+          <article class="card status done">
+            <h3>✅ Live Board Deploy</h3>
+            <p>HTTPS is enabled and board service is now reachable at board.stewrobot.com.</p>
           </article>
         </div>
 
         <div class="live-slot">
-          <p class="label">Planned live board URL</p>
-          <p><strong>https://board.stewrobot.com</strong> <span class="chip">coming soon</span></p>
-          <p class="hint">As soon as deployment is complete, this link will switch from placeholder to live service.</p>
+          <p class="label">Live board URL</p>
+          <p><strong><a href="https://board.stewrobot.com" target="_blank" rel="noreferrer">https://board.stewrobot.com</a></strong> <span class="chip live">online</span></p>
+          <p class="hint">Community board is now live with HTTPS.</p>
         </div>
       </section>
 
