feat: replace email contact with board-first community link

--- a/index.html
+++ b/index.html
@@ -127,8 +127,9 @@
       </section>
 
       <section id="contact" class="container section">
-        <h2>Contact</h2>
-        <p>Email: hello@stewrobot.com</p>
+        <h2>Community</h2>
+        <p>Official communication is now handled in the live board.</p>
+        <p><a class="text-link" href="https://board.stewrobot.com" target="_blank" rel="noreferrer">Go to board.stewrobot.com ↗</a></p>
       </section>
     </main>
 
