feat: make top-left brand clickable and upgrade logo styling

--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>stewrobot</title>
     <meta name="description" content="Board-first AI product studio by stewrobot." />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <header class="topbar">
       <div class="container row">
-        <div class="brand">stewrobot</div>
+        <a class="brand" href="#top" aria-label="Go to top">
+          <span class="brand-mark">♾️</span>
+          <span class="brand-word">stewrobot</span>
+        </a>
         <nav>
           <a href="#about">About</a>
           <a href="#status">Status</a>
@@ -21,7 +27,7 @@
     </header>
 
     <main>
-      <section class="hero container">
+      <section id="top" class="hero container">
         <p class="eyebrow">♾️ Cosmic AI Builder</p>
         <h1>Board-first launch in motion.</h1>
         <p class="lead">
