feat: add KR/EN/JP language switch and fix anchor offset under top menu

--- a/index.html
+++ b/index.html
@@ -17,20 +17,27 @@
           <span class="brand-mark">♾️</span>
           <span class="brand-word">stewrobot</span>
         </a>
-        <nav>
-          <a href="#about">About</a>
-          <a href="#status">Status</a>
-          <a href="#board">Board</a>
-          <a href="#contact">Contact</a>
-        </nav>
+        <div class="top-actions">
+          <nav>
+            <a href="#about" data-i18n="nav_about">Overview</a>
+            <a href="#status" data-i18n="nav_status">Progress</a>
+            <a href="#board" data-i18n="nav_board">Board</a>
+            <a href="#contact" data-i18n="nav_contact">Community</a>
+          </nav>
+          <div class="lang-switch" aria-label="Language switcher">
+            <button class="lang-btn" data-lang="ko">KR</button>
+            <button class="lang-btn active" data-lang="en">EN</button>
+            <button class="lang-btn" data-lang="ja">JP</button>
+          </div>
+        </div>
       </div>
     </header>
 
     <main>
       <section id="top" class="hero container">
         <p class="eyebrow">♾️ Cosmic AI Builder</p>
-        <h1>Board-first launch in motion.</h1>
-        <p class="lead">
+        <h1 data-i18n="hero_title">Board-first launch in motion.</h1>
+        <p class="lead" data-i18n="hero_lead">
           stewrobot is building practical AI products with a community board at the center: faster feedback loops, faster shipping.
         </p>
         <div class="cta-row">
@@ -42,14 +49,14 @@
       </section>
 
       <section id="about" class="container section">
-        <h2>About</h2>
-        <p>
+        <h2 data-i18n="about_title">Overview</h2>
+        <p data-i18n="about_text">
           We design, prototype, and launch clean software people can actually use. Current focus: board experience, mobile app foundation, and AI workflow tooling.
         </p>
       </section>
 
       <section id="status" class="container section">
-        <h2>Launch Status</h2>
+        <h2 data-i18n="status_title">Progress</h2>
         <div class="cards">
           <article class="card status done">
             <h3>✅ Domain & Pages</h3>
@@ -133,9 +140,9 @@
       </section>
 
       <section id="contact" class="container section">
-        <h2>Community</h2>
-        <p>Official communication is now handled in the live board.</p>
-        <p><a class="text-link" href="https://board.stewrobot.com" target="_blank" rel="noreferrer">Go to board.stewrobot.com ↗</a></p>
+        <h2 data-i18n="community_title">Community</h2>
+        <p data-i18n="community_text">Official communication is now handled in the live board.</p>
+        <p><a class="text-link" href="https://board.stewrobot.com" rel="noreferrer" data-i18n="community_link">Go to board.stewrobot.com ↗</a></p>
       </section>
     </main>
 
@@ -147,6 +154,63 @@
 
     <script>
       document.getElementById('y').textContent = new Date().getFullYear();
+
+      const i18n = {
+        ko: {
+          nav_about: '소개',
+          nav_status: '진행상황',
+          nav_board: '게시판',
+          nav_contact: '커뮤니티',
+          hero_title: '보드 중심 런칭, 진행 중.',
+          hero_lead: 'stewrobot은 커뮤니티 보드를 중심으로 실용적인 AI 제품을 만듭니다. 더 빠른 피드백, 더 빠른 출시.',
+          about_title: '개요',
+          about_text: '우리는 사람들이 실제로 쓰는 소프트웨어를 설계·프로토타이핑·출시합니다. 현재 집중 영역은 보드 경험, 모바일 앱 기반, AI 워크플로우 도구입니다.',
+          status_title: '진행상황',
+          community_title: '커뮤니티',
+          community_text: '공식 소통은 라이브 게시판에서 진행됩니다.',
+          community_link: 'board.stewrobot.com 바로가기 ↗'
+        },
+        en: {
+          nav_about: 'Overview',
+          nav_status: 'Progress',
+          nav_board: 'Board',
+          nav_contact: 'Community',
+          hero_title: 'Board-first launch in motion.',
+          hero_lead: 'stewrobot is building practical AI products with a community board at the center: faster feedback loops, faster shipping.',
+          about_title: 'Overview',
+          about_text: 'We design, prototype, and launch clean software people can actually use. Current focus: board experience, mobile app foundation, and AI workflow tooling.',
+          status_title: 'Progress',
+          community_title: 'Community',
+          community_text: 'Official communication is now handled in the live board.',
+          community_link: 'Go to board.stewrobot.com ↗'
+        },
+        ja: {
+          nav_about: '概要',
+          nav_status: '進捗',
+          nav_board: '掲示板',
+          nav_contact: 'コミュニティ',
+          hero_title: 'ボード中心のローンチ、進行中。',
+          hero_lead: 'stewrobotはコミュニティボードを中心に、実用的なAIプロダクトを構築しています。より速いフィードバック、より速いリリース。',
+          about_title: '概要',
+          about_text: '私たちは実際に使われるソフトウェアを設計・試作・公開します。現在の重点は掲示板体験、モバイル基盤、AIワークフローツールです。',
+          status_title: '進捗',
+          community_title: 'コミュニティ',
+          community_text: '公式コミュニケーションはライブ掲示板で行っています。',
+          community_link: 'board.stewrobot.com へ ↗'
+        }
+      };
+
+      function applyLang(lang) {
+        document.querySelectorAll('[data-i18n]').forEach((el) => {
+          const key = el.getAttribute('data-i18n');
+          if (i18n[lang] && i18n[lang][key]) el.textContent = i18n[lang][key];
+        });
+        document.querySelectorAll('.lang-btn').forEach((b) => b.classList.toggle('active', b.dataset.lang === lang));
+      }
+
+      document.querySelectorAll('.lang-btn').forEach((btn) => {
+        btn.addEventListener('click', () => applyLang(btn.dataset.lang));
+      });
     </script>
   </body>
 </html>
