ux: open live board links in same tab instead of new window

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </p>
         <div class="cta-row">
           <a class="btn primary" href="https://github.com/stewrobot" target="_blank" rel="noreferrer">GitHub</a>
-          <a class="btn" href="https://board.stewrobot.com" target="_blank" rel="noreferrer">Live board ↗</a>
+          <a class="btn" href="https://board.stewrobot.com" rel="noreferrer">Live board ↗</a>
           <a class="btn" href="https://x.com/stewrobot" target="_blank" rel="noreferrer">X</a>
           <a class="btn" href="https://instagram.com/stewrobot" target="_blank" rel="noreferrer">Instagram</a>
         </div>
@@ -74,7 +74,7 @@
 
         <div class="live-slot">
           <p class="label">Live board URL</p>
-          <p><strong><a href="https://board.stewrobot.com" target="_blank" rel="noreferrer">https://board.stewrobot.com</a></strong> <span class="chip live">online</span></p>
+          <p><strong><a href="https://board.stewrobot.com" rel="noreferrer">https://board.stewrobot.com</a></strong> <span class="chip live">online</span></p>
           <p class="hint">Community board is now live with HTTPS.</p>
         </div>
       </section>
