--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="topbar">
       <div class="container row">
-        <a class="brand" href="#top" aria-label="Go to top">
+        <a class="brand" href="#" aria-label="Go to top" id="brandTopLink">
           <span class="brand-mark">♾️</span>
           <span class="brand-word">stewrobot</span>
         </a>
@@ -305,6 +305,13 @@
           applyLang(btn.dataset.lang);
           closeLangMenu();
         });
+      });
+
+      const brandTopLink = document.getElementById('brandTopLink');
+      brandTopLink.addEventListener('click', (e) => {
+        e.preventDefault();
+        history.replaceState(null, '', window.location.pathname + window.location.search);
+        window.scrollTo({ top: 0, behavior: 'smooth' });
       });
 
       const savedLang = localStorage.getItem('stewrobot_lang');
