feat: add priority global languages with partial mode and EN fallback

--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
               <button class="lang-btn" data-lang="ko" role="menuitem">한국어 <span class="lang-state" data-i18n="lang_partial">partial</span></button>
               <button class="lang-btn active" data-lang="en" role="menuitem">English <span class="lang-state full" data-i18n="lang_full">full</span></button>
               <button class="lang-btn" data-lang="ja" role="menuitem">日本語 <span class="lang-state" data-i18n="lang_partial">partial</span></button>
+              <button class="lang-btn" data-lang="es" role="menuitem">Español <span class="lang-state" data-i18n="lang_partial">partial</span></button>
+              <button class="lang-btn" data-lang="pt-BR" role="menuitem">Português (BR) <span class="lang-state" data-i18n="lang_partial">partial</span></button>
+              <button class="lang-btn" data-lang="hi" role="menuitem">हिन्दी <span class="lang-state" data-i18n="lang_partial">partial</span></button>
+              <button class="lang-btn" data-lang="ar" role="menuitem">العربية <span class="lang-state" data-i18n="lang_partial">partial</span></button>
+              <button class="lang-btn" data-lang="fr" role="menuitem">Français <span class="lang-state" data-i18n="lang_partial">partial</span></button>
+              <button class="lang-btn" data-lang="de" role="menuitem">Deutsch <span class="lang-state" data-i18n="lang_partial">partial</span></button>
+              <button class="lang-btn" data-lang="id" role="menuitem">Bahasa Indonesia <span class="lang-state" data-i18n="lang_partial">partial</span></button>
             </div>
           </div>
         </div>
@@ -254,7 +261,14 @@
           deploy_6: 'HTTPS証明書適用後、CRUD + API docs を確認',
           community_title: 'コミュニティ', community_text: '公式コミュニケーションはライブ掲示板で行っています。', community_link: 'board.stewrobot.com へ ↗',
           footer_prefix: '©', footer_suffix: 'All rights reserved.'
-        }
+        },
+        es: { nav_about: 'Resumen', nav_status: 'Progreso', nav_board: 'Foro', nav_contact: 'Comunidad', lang_full: 'completo', lang_partial: 'parcial' },
+        'pt-BR': { nav_about: 'Visão geral', nav_status: 'Progresso', nav_board: 'Fórum', nav_contact: 'Comunidade', lang_full: 'completo', lang_partial: 'parcial' },
+        hi: { nav_about: 'अवलोकन', nav_status: 'प्रगति', nav_board: 'बोर्ड', nav_contact: 'समुदाय', lang_full: 'पूर्ण', lang_partial: 'आंशिक' },
+        ar: { nav_about: 'نظرة عامة', nav_status: 'التقدم', nav_board: 'اللوحة', nav_contact: 'المجتمع', lang_full: 'كامل', lang_partial: 'جزئي' },
+        fr: { nav_about: 'Aperçu', nav_status: 'Progression', nav_board: 'Forum', nav_contact: 'Communauté', lang_full: 'complet', lang_partial: 'partiel' },
+        de: { nav_about: 'Überblick', nav_status: 'Fortschritt', nav_board: 'Board', nav_contact: 'Community', lang_full: 'voll', lang_partial: 'teilweise' },
+        id: { nav_about: 'Ringkasan', nav_status: 'Progres', nav_board: 'Board', nav_contact: 'Komunitas', lang_full: 'penuh', lang_partial: 'parsial' }
       };
 
       const langToggle = document.getElementById('langToggle');
