fix: restore visible theme toggle and remove filled icon button style

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </nav>
 
           <div class="theme-switch" aria-label="Theme switcher">
-            <button class="theme-toggle" id="themeToggle" aria-haspopup="true" aria-expanded="false" aria-controls="themeMenu">🎨</button>
+            <button class="theme-toggle" id="themeToggle" aria-haspopup="true" aria-expanded="false" aria-controls="themeMenu">🎨 Theme</button>
             <div class="theme-menu" id="themeMenu" role="menu" aria-hidden="true">
               <button class="theme-btn active" data-theme="cosmic" role="menuitem">Cosmic</button>
               <button class="theme-btn" data-theme="atelier" role="menuitem">Atelier</button>
